# cppgl

./: CMakeLists.txt  README.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt  headers.hpp  main.cpp  utils.hpp
src/game/: debugcross.hpp
src/utils/: camera.hpp  clock.hpp  program.hpp  shader.hpp  uniform.hpp  utils.hpp  vao.hpp  vbo.hpp
